frontend/themes/froniusvizualizer/styles.css
@import "animation.css";
@import "background.css";
@import "border.css";
@import "border-radius.css";
@import "color.css";
@import "layout.css";
@import "opacity.css";
@import "size.css";
@import "transform.css";
@import "transition.css";
@import "typography.css";

body {
    margin: 0;
}

* {
    box-sizing: border-box;
}

html {
    --fullscreen-height: calc(100vh - 3.5rem);
    --fullscreen-height-column: calc(100vh - 7.5rem);
}

:focus-visible {
    outline-color: var(--lumo-primary-color-50pct);
}

/* iOS specific height setting */
@supports (-webkit-touch-callout: none) {
    html {
        --fullscreen-height: calc(100vh - 10.5rem);
        --fullscreen-height-column: calc(100vh - 14.5rem);
    }
}

